--- a/topics.html
+++ b/topics.html
@@ -1,48 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Physics Topics</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f5f7fa; }
-    header { background: #2d3e50; color: white; padding: 1rem; text-align: center; }
-    nav { display: flex; justify-content: center; background: #1abc9c; }
-    nav a { color: white; text-decoration: none; padding: 1rem; display: block; }
-    nav a:hover { background: #16a085; }
-    .container { max-width: 1000px; margin: auto; padding: 2rem; }
-    .card { background: white; padding: 1.5rem; margin-bottom: 1rem; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-    footer { background: #2d3e50; color: white; text-align: center; padding: 1rem; margin-top: 2rem; }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Physics Topics</h1>
-    <p>Explore key areas of physics</p>
-  </header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="topics.html">Topics</a>
-    <a href="resources.html">Resources</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-
-  <div class="container">
-    <div class="card">
-      <h2>Main Areas</h2>
-      <ul>
-        <li>Mechanics</li>
-        <li>Waves & Sound</li>
-        <li>Thermodynamics</li>
-        <li>Electricity & Magnetism</li>
-        <li>Modern Physics</li>
-      </ul>
-    </div>
-  </div>
-
-  <footer>
-    <p>© 2025 Physics Learning Hub</p>
-  </footer>
-</body>
-</html>
+<div class="card">
+  <h2>Mechanics</h2>
+  <img src="mechanics.png" alt="Mechanics" style="width:100%; max-height:200px; object-fit:cover; border-radius:10px;">
+  <p>Learn about motion, forces, and energy.</p>
+</div>
